# 3171599-F-Yohan-Martinez

./: Dockerfile
week_1/: README.md  docker-compose.yml  pyproject.toml
week_1/src/: main.py
week_2/: Dockerfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  schemas.py  settings.json
week_3/: Dockerfile  README.md  database.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml  schemas.py
week_3/routers/: categories.py  products.py
week_4/: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  exceptions.py  main.py  models.py  pyproject.toml
