[project]
name = "libros-usados-api"
version = "1.0.0"
description = "API FastApi para e-commerce de libros usados"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.hatch.build.targets.wheel]
artifacts = ["*.py", "routers/**/*.py"]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
