[project]
name = "task-manager-api"
version = "1.0.0"
description = "Task Manager API - Proyecto Semana 04"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    #"httpx>=0.29.0",
]
